lab2/ingressR.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vh-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"


spec:
  rules:
    - http:
        paths:
          - path: /video
            backend:
              serviceName: video-service
              servicePort: 30093
          - path: /wear
            backend:
              serviceName: apparels-service
              servicePort: 30093
